--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,145 @@
         <link rel="stylesheet" href="styles/styles.css?cb=1626987825138" />
     </head>
     <body>
-        <h1>I dont know what to say..</h1>
+        <section>
+            <header>
+                <nav>
+                    <nav>
+                        <div class="logo"></div>
+
+                        <button class="“btn-menu”" id="“btn-menu”">
+                            <span class="“button-content”">
+                                <span class="“text”">Menu</span>
+                                <span class="“bar”"></span> </span
+                            ><!-- end button-content -->
+                        </button>
+                        <ul>
+                            <li><a href="#">ABOUT</a></li>
+                            <li><a href="#">PRODUCTS</a></li>
+                            <li><a href="#">SERVICES</a></li>
+                            <li><a href="#">PARTS</a></li>
+                            <li><a href="#">NEWS</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                            <li><a href="#">INSTALLATION MAP</a></li>
+                            <li><a href="#">PRODUCTS</a></li>
+                        </ul>
+                    </nav>
+                </nav>
+                <div class="banner">
+                    <h1>
+                        We design and fabricate indestructible wastewater
+                        screens. Enough said.
+                    </h1>
+                    <div class="">View Products</div>
+                    <div class="">View Services</div>
+                </div>
+                <div class="wave-white"></div>
+            </header>
+        </section>
+        <main>
+            <section class="customized">
+                <h2>Customize per order</h2>
+                <p>
+                    Just as no two treatment plants are the same, no two of our
+                    screening, grit handling or sludge thickening products are
+                    either. We’ll help determine exactly what you need.
+                </p>
+                <div>
+                    <figure>
+                        <img src="" alt="" />
+
+                        <figcaption>Screening</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="" />
+
+                        <figcaption>SCREENING HANDLING</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="" />
+
+                        <figcaption>GRIT HANDLING</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="" alt="" />
+
+                        <figcaption>SLUDGE</figcaption>
+                    </figure>
+                </div>
+                <div class="wave-blue"></div>
+            </section>
+            <section class="product-advisor">
+                <h2>PRODUCT ADVISOR</h2>
+                <p>Find your project's perfect fit.</p>
+                <label for="product-info">Product type</label>
+                <select id="product-info" name="product-info">
+                    <option value="Select">Select</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="police">Police Officer</option>
+                    <option value="sales">Sales Representative</option>
+                    <option value="developer">Developer</option>
+                    <option value="physician">Physician</option>
+                </select>
+                <label for="product-info">Screen Location</label>
+                <select id="product-info" name="product-info">
+                    <option value="Select">Select</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="police">Police Officer</option>
+                    <option value="sales">Sales Representative</option>
+                    <option value="developer">Developer</option>
+                    <option value="physician">Physician</option>
+                </select>
+                <label for="product-info">Flow Type</label>
+                <select id="product-info" name="product-info">
+                    <option value="Select">Select</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="police">Police Officer</option>
+                    <option value="sales">Sales Representative</option>
+                    <option value="developer">Developer</option>
+                    <option value="physician">Physician</option>
+                </select>
+                <label for="product-info">Channel Depth</label>
+                <select id="product-info" name="product-info">
+                    <option value="Select">Select</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="police">Police Officer</option>
+                    <option value="sales">Sales Representative</option>
+                    <option value="developer">Developer</option>
+                    <option value="physician">Physician</option>
+                </select>
+                <label for="product-info">Channel Width</label>
+                <select id="product-info" name="product-info">
+                    <option value="Select">Select</option>
+                    <option value="teacher">Teacher</option>
+                    <option value="police">Police Officer</option>
+                    <option value="sales">Sales Representative</option>
+                    <option value="developer">Developer</option>
+                    <option value="physician">Physician</option>
+                </select>
+
+                <input type="submit" />
+            </section>
+
+            <section class="about">
+                <div class="about-bg">
+                    <h2>
+                        Delivering clean safe water since 1975. Refreshing
+                        indeed.
+                    </h2>
+                    <p>
+                        Vulcan wastewater screening equipment has played a vital
+                        role in protecting the water supply of more than 900
+                        cities and communities throughout the world.
+                    </p>
+                    <a href="#">ABOUT US</a>
+                </div>
+
+                <div class="video">
+                    <video src=""></video>
+                </div>
+            </section>
+        </main>
+        <footer></footer>
         <!-- Put your HTML code here... -->
 
         <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
