Dennis Version merge to main

--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
     <!-- end Google Fonts -->
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627336887919" /> -->
+    <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627342035151" /> -->
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -211,34 +211,38 @@
                 screening, grit handling or sludge thickening products are
                 either. We’ll help determine exactly what you need.
             </p>
-            <div>
-                <figure>
-                    <img src="" alt="" />
+            <div class="fig-grid">
+                <figure class="fig-1">
+                    <img src="images/machine-01-300x274.png" alt="screnning machine" />
 
                     <figcaption>Screening</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="" />
+                
+                <figure class="fig-2">
+                    <img src="images/machine-02-300x274.png" alt="screening handling machine" />
 
-                    <figcaption>SCREENING HANDLING</figcaption>
+                    <figcaption>Screening Handling</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="" />
+                <figure class="fig-3">
+                    <img src="images/machine-03-300x274.png" alt="grit handling machine" />
 
-                    <figcaption>GRIT HANDLING</figcaption>
+                    <figcaption>Grit Handling</figcaption>
                 </figure>
-                <figure>
-                    <img src="" alt="" />
+                <figure class="fig-4">
+                    <img src="images/machine-04-300x274.png" alt="sludge thickening machine" />
 
-                    <figcaption>SLUDGE</figcaption>
+                    <figcaption>Sludge Thickening</figcaption>
                 </figure>
             </div>
-            <div class="wave-blue"></div>
+            <div class="wave-blue">
+                <img src="images/wave-blue-dark.png" alt="blue dark wave">
+            </div>
         </section>
         <section class="product-advisor">
-            <h2>PRODUCT ADVISOR</h2>
+            <h2>Product Advisor</h2>
             <p>Find your project's perfect fit.</p>
-            <form action="product-advisor">
+            <hr>
+            <form class="form-flex" action="product-advisor">
                 <label for="product-info">Product type</label>
                 <select id="product-info" name="product-info">
                     <option value="Select">Select</option>
@@ -257,7 +261,7 @@
                     <option value="developer">Lorem ipsum</option>
                     <option value="physician">Lorem ipsum</option>
                 </select>
-                <label for="product-info">Flow Type</label><br>
+                <label for="product-info">Flow Type</label>
                 <select id="product-info" name="product-info">
                     <option value="Select">Select</option>
                     <option value="teacher">Lorem ipsum</option>
@@ -285,7 +289,7 @@
                     <option value="physician">Lorem ipsum</option>
                 </select>
 
-                <input type="submit" />
+                <input type="button" value="FIND MY PRODUCT">
             </form>
         </section>
 
@@ -300,11 +304,13 @@
                     role in protecting the water supply of more than 900
                     cities and communities throughout the world.
                 </p>
-                <a href="#">ABOUT US</a>
+                <a href="#">About Us</a>
             </div>
 
             <div class="video">
-                <video src=""></video>
+                <video width="200px" height="auto" controls>
+                    <source src="https://vimeo.com/183929811" type="mp4">
+                </video>
             </div>
         </section>
 
@@ -380,7 +386,7 @@
     <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
     <script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-    <script src="scripts/script.min.js?cb=1627336887919"></script>
+    <script src="scripts/script.min.js?cb=1627342035151"></script>
     <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
 </body>
 
