newsletter/contact/map/footer section

--- a/dev/index.html
+++ b/dev/index.html
@@ -25,10 +25,16 @@
             href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+            rel="stylesheet"
+        />
         <!-- end Google Fonts -->
 
         <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-        <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627340518212" /> -->
+        <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627425315294" /> -->
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
 
@@ -539,7 +545,7 @@
                     </p>
                     <a href="#">ABOUT US</a>
                 </div>
-
+                <!-- 
                 <div class="video">
                     <iframe
                         src="https://player.vimeo.com/video/183929811?title=0&byline=0&portrait=0"
@@ -559,7 +565,7 @@
                         >
                         on <a href="https://vimeo.com">Vimeo</a>.
                     </p>
-                </div>
+                </div> -->
             </section>
 
             <section class="newsletter">
@@ -590,91 +596,97 @@
                         width="320px"
                         height="250px"
                     />
-                    <div class="map-txt">
+                    <div class="map-txt btn">
                         <h2>Installed in a city near you</h2>
-                        <a class="btn" href="#">Find a Vulcan Install</a>
+                        <a href="#">Find a Vulcan Install</a>
                     </div>
-
-                    <!-- I think the map is an image instead of an interactive map -->
-
-                    <!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="501" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=arizona&t=&z=5&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:501px;}</style><a href="https://www.embedgooglemap.net">google map link generator</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:501px;}</style></div></div> -->
                 </section>
 
                 <section class="grid-item contact">
-                    <div class="contact-txt">
+                    <div class="contact-txt btn">
                         <h2>Ready to spec Vulcan for your project?</h2>
                         <a href="#">Contact Us</a>
                     </div>
                 </section>
             </div>
         </main>
-
+        <!-- <div class="relative"> -->
         <footer>
-            <div class="wave-sky-blue">
-                <img src="images/wave-blue-light.png" alt="" />
+            <img src="images/wave-blue-light.png" class="wave-sky-blue" />
+
+            <div class="blue">
+                <img
+                    class="logo"
+                    src="images/logo-white-vulcan.svg"
+                    alt="Site Logo"
+                />
+                <div class="flex-container">
+                    <div class="flex-column">
+                        <div class="flex-row">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                            >
+                                <path
+                                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"
+                                />
+                            </svg>
+
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                            >
+                                <path
+                                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"
+                                />
+                            </svg>
+                        </div>
+                        <div class="flex-row">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                            >
+                                <path
+                                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3.445 17.827c-3.684 1.684-9.401-9.43-5.8-11.308l1.053-.519 1.746 3.409-1.042.513c-1.095.587 1.185 5.04 2.305 4.497l1.032-.505 1.76 3.397-1.054.516z"
+                                />
+                            </svg>
+
+                            <a href="tel:17126422755">+1 712-642-2755</a>
+                        </div>
+                        <div class="flex-row">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="20"
+                                height="20"
+                                viewBox="0 0 24 24"
+                            >
+                                <path
+                                    d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z"
+                                />
+                            </svg>
+
+                            <a href="#">Contact Us</a>
+                        </div>
+                    </div>
+
+                    <p>Copyright 2017. All Rights Reserved</p>
+                </div>
             </div>
-            <img
-                class="logo"
-                src="images/logo-white-vulcan.svg"
-                alt="Site Logo"
-            />
-
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-            >
-                <path
-                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3 8h-1.35c-.538 0-.65.221-.65.778v1.222h2l-.209 2h-1.791v7h-3v-7h-2v-2h2v-2.308c0-1.769.931-2.692 3.029-2.692h1.971v3z"
-                />
-            </svg>
-
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-            >
-                <path
-                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"
-                />
-            </svg>
-
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-            >
-                <path
-                    d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm3.445 17.827c-3.684 1.684-9.401-9.43-5.8-11.308l1.053-.519 1.746 3.409-1.042.513c-1.095.587 1.185 5.04 2.305 4.497l1.032-.505 1.76 3.397-1.054.516z"
-                />
-            </svg>
-
-            <a href="tel:17126422755">+1 712-642-2755</a>
-
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-            >
-                <path
-                    d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z"
-                />
-            </svg>
-
-            <a href="#">Contact Us</a>
-
-            <p>Copyright 2017. All Rights Reserved</p>
         </footer>
+        <!-- </div> -->
+
         <!-- Put your HTML code here... -->
 
         <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
         <script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
         <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-        <script src="scripts/script.min.js?cb=1627340518212"></script>
+        <script src="scripts/script.min.js?cb=1627425315294"></script>
         <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
     </body>
 </html>
