--- a/dev/index.html
+++ b/dev/index.html
@@ -437,17 +437,6 @@
             </div>
             <!-- nav end -->
 
-        <div class="banner"> 
-
-            <h1>
-                We design and fabricate indestructible wastewater
-                screens. Enough said.
-            </h1>
-            <div class="">View Products</div>
-            <div class="">View Services</div>
-
-        </div>
-        
        
     </header>
 
@@ -632,8 +621,9 @@
         </main>
         <!-- <div class="relative"> -->
         <footer>
-            <img src="images/wave-blue-light.png" class="wave-sky-blue" />
-
+            <div class="wave-blue-light">
+                <img src="images/wave-blue-light.png" class="wave-sky-blue" />
+            </div>
             <div class="blue">
                 <img
                     class="logo"
