--- a/dev/index.html
+++ b/dev/index.html
@@ -22,7 +22,7 @@
         <!-- end Google Fonts -->
     
         <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
-        <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627484735946" /> -->
+        <!-- <link rel="stylesheet" href="styles/styles.css?cb=1627711134536" /> -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
         <link rel="stylesheet" href="styles/styles.css" />
@@ -598,6 +598,7 @@
           <input type="submit" name="submit" id="submit" value="Submit" />
         </form>
       </section>
+    </main>
 
       <div class="contact-location">
         <section class="grid-item map">
@@ -695,7 +696,7 @@
     <script src="scripts/libs/jquery/jquery-3.4.1.min.js"></script>
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
 
-    <script src="scripts/script.min.js?cb=1627611013120"></script>
+    <script src="scripts/script.min.js?cb=1627711134536"></script>
     <!-- *** IMPORTANT *** DO NOT ADD ADDITIONAL SCRIPT LINKS HERE...If you want to add additional scripts simply save the script files to the "dev/scripts" directory (for your custom scripts) and the 'dev/scripts/libs' directory for any jQuery plugins or other JavaScript libraries and Gulp will concatenate and minify them into the "script.min.js" file above. See the project instructions for details -->
   </body>
 </html>
